--- a/index.html
+++ b/index.html
@@ -62,17 +62,41 @@
         <div>
             <button class="btn-register">Register</button>
         </div>
-        
+
         <i class="fa-solid fa-bars"></i>
 
 
     </header>
-
-
     <!--======================End header area=====================-->
 
     <!--====================== Start Banner area=====================-->
-    <!--======================End Banner area=====================-->
+
+    <section>
+        <div class="container">
+            <div class="owl-carousel owl-theme ">
+                <div class="item ">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img src="/assets//images/banner.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--======================End Banner area =======================-->
 
 
 
