added a popular couse and eleaning institute section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
     <section>
         <div class="container">
+
             <div class="owl-carousel owl-theme ">
-                <div class="item ">
+                <div class="item banner-img">
                     <img src="/assets//images/banner.jpg" alt="">
                 </div>
                 <div class="item">
@@ -97,6 +98,174 @@
     </section>
 
     <!--======================End Banner area =======================-->
+
+    <!--======================Start Popular course area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="popular-course">
+
+                <!-- Popular course header -->
+                <div class="popular-course-header">
+                    <h1>Discover Our Popular Courses</h1>
+                    <p>It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+
+                <!-------- Popular course main-------->
+                <div class="popular-course-main">
+
+                    <!--------- first section---------->
+                    <div class="popular-course-card">
+
+                        <!-- first card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-1.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Fundamental Of UI/UX Design</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                        <!-- second card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-2.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Javascript Basic to advanced</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!------------- second section-------->
+                    <div class="popular-course-card">
+
+                        <!-- third card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-3.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Fullstack Web Development</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                        <!-- fourth card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-4.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Digital Marketing</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!----------- third section---------->
+                    <div class="popular-course-card">
+
+                        <!-- fifth card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-5.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Photography Basic Rules</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                        <!-- sixth card -->
+                        <div class="popular-courses">
+                            <div>
+                                <img class="popular-course-img" src="/assets/images/course-6.png" alt="">
+                            </div>
+                            <div class="popular-course-text">
+                                <h2>Motion Graphics</h2>
+                                <p>Some quick example text to build on the card title and make up the bulk of the card.
+                                </p>
+                                <h3>Price : 20$</h3>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!--------Popular course Button--------->
+                <div class="popular-course-btn">
+                    <button>See More Courses</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End Popular course  area =======================-->
+
+    <!--======================Start E-learning institute  area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="elearning-institute">
+
+                <div class="elearning-image">
+                    <img src="/assets/images/elearning.png" alt="">
+                </div>
+
+                <div class="elearning-text">
+                    <h1>Explore The elearning Institute</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+
+                       <h3> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                        Internet tend to repeat predefined.</h3>
+
+                        <div class="elearning-number">
+                            <div>
+                                <h2>3.2K+</h2>
+                                <h4>Online Course</h4>
+                            </div>
+                            <div>
+                                <h2>600+</h2>
+                                <h4>Expert member</h4>
+                            </div>
+                            <div>
+                                <h2>1k+</h2>
+                                <h4>Rating & Review</h4>
+                            </div>
+                        </div>
+
+                        <div class="elearning-btn">
+                            <button>Read More</button>
+                        </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End E-learning institute area =======================-->
 
 
 
