added a registration section

--- a/index.html
+++ b/index.html
@@ -237,27 +237,27 @@
                         alteration in some form, by injected humour, or randomised words which don't look even slightly
                         believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
 
-                       <h3> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                    <h3> Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
                         Internet tend to repeat predefined.</h3>
 
-                        <div class="elearning-number">
-                            <div>
-                                <h2>3.2K+</h2>
-                                <h4>Online Course</h4>
-                            </div>
-                            <div>
-                                <h2>600+</h2>
-                                <h4>Expert member</h4>
-                            </div>
-                            <div>
-                                <h2>1k+</h2>
-                                <h4>Rating & Review</h4>
-                            </div>
+                    <div class="elearning-number">
+                        <div>
+                            <h2>3.2K+</h2>
+                            <h4>Online Course</h4>
                         </div>
+                        <div>
+                            <h2>600+</h2>
+                            <h4>Expert member</h4>
+                        </div>
+                        <div>
+                            <h2>1k+</h2>
+                            <h4>Rating & Review</h4>
+                        </div>
+                    </div>
 
-                        <div class="elearning-btn">
-                            <button>Read More</button>
-                        </div>
+                    <div class="elearning-btn">
+                        <button>Read More</button>
+                    </div>
 
                 </div>
 
@@ -266,6 +266,26 @@
     </section>
 
     <!--======================End E-learning institute area =======================-->
+
+    <!--======================Start Registration area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="register">
+
+                <div>
+                    <h1>Ready to join?</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+                <div class="registration-btn">
+                    <button>Register Now</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End Registration area =======================-->
 
 
 
