added a successful student section

--- a/index.html
+++ b/index.html
@@ -275,10 +275,24 @@
 
                 <div>
                     <h1>Ready to join?</h1>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
                 </div>
                 <div class="registration-btn">
                     <button>Register Now</button>
+                    <!-- <form >
+                        <div class="form">
+                            <label class="form-label">Your Name</label>
+                            <input class="form-input" type="text" placeholder="Name" name="name" id="">
+
+                            <label class="form-label">Your Email</label>
+                            <input class="form-input" type="email" placeholder="Email" name="email" id="">
+
+                            <label class="form-label">Password</label>
+                            <input class="form-input" type="password" placeholder="Password" name="password" id="">
+                            <button class="form-btn">Registration</button>
+                        </div>
+                    </form> -->
                 </div>
 
             </div>
@@ -286,6 +300,67 @@
     </section>
 
     <!--======================End Registration area =======================-->
+
+    <!--======================Start Successful Student area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="successful-student">
+                <div class="successful-student-header">
+                    <h1>Meet Our Successfull Students</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when
+                        looking at its layout.</p>
+                </div>
+                <div class="successful-student-main">
+                    <!-- first card -->
+                    <div class="successful-student-card">
+                        <div>
+                            <img src="/assets/images/student-1.png" alt="">
+                        </div>
+                        <h2>Awlad Hossain</h2>
+                        <p>UIUX Designer</p>
+                    </div>
+
+                    <!-- second card -->
+                    <div class="successful-student-card">
+                        <div>
+                            <img src="/assets/images/student-2.png" alt="">
+                        </div>
+                        <h2>Jannatul Islam</h2>
+                        <p>Motion Design</p>
+                    </div>
+
+                    <!-- third card -->
+                    <div class="successful-student-card">
+                        <div>
+                            <img src="/assets/images/student-3.png" alt="">
+                        </div>
+                        <h2>Imran Hossain</h2>
+                        <p>Graphic Designer</p>
+                    </div>
+
+                    <!-- fourth card -->
+                    <div class="successful-student-card">
+                        <div>
+                            <img src="/assets/images/student-4.png" alt="">
+                        </div>
+                        <h2>Nishi Akter</h2>
+                        <p>Web Developer</p>
+                    </div>
+
+                </div>
+
+                <!-- button -->
+                <div class="view-btn">
+                    <button>View All</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End Successful Student area =======================-->
 
 
 
