added a frequently asked question section

--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
 
             <div class="owl-carousel owl-theme ">
                 <div class="item banner-img">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets//images/banner.jpg" alt="">
+                    <img src="/assets/images/banner.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -312,6 +312,7 @@
                         when
                         looking at its layout.</p>
                 </div>
+
                 <div class="successful-student-main">
                     <!-- first card -->
                     <div class="successful-student-card">
@@ -361,6 +362,72 @@
     </section>
 
     <!--======================End Successful Student area =======================-->
+
+    <!--======================Start student feedback area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="student-feedback">
+
+                <div class="feedback-header">
+                    <h1>Some Students Feedback</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when
+                        looking at its layout.</p>
+                </div>
+
+                <!-- <div>
+                    <div class="owl-carousel owl-theme ">
+                        <div class="item">
+                           <h2>hello</h2>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia fuga animi minus officiis sequi in molestiae expedita eveniet suscipit? Quis deleniti voluptatibus quaerat assumenda beatae, possimus eum facilis repellendus ad?
+                           </p>
+                        </div>
+                        <div class="item">
+                            <img src="/assets//images/banner.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="/assets//images/banner.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="/assets//images/banner.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="/assets//images/banner.jpg" alt="">
+                        </div>
+                        <div class="item">
+                            <img src="/assets/images/banner.jpg" alt="">
+                        </div>
+                    </div>
+                </div> -->
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End student feedback area =======================-->
+
+    <!--======================Start student questions area =======================-->
+
+    <section>
+        <div class="container">
+            <div class="frequent-question">
+
+                <div class="questions-header">
+                    <h1>Frequently Asked Questions</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+
+                <div>
+                    
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!--======================End student questions area =======================-->
 
 
 
