added a trusted company section

--- a/index.html
+++ b/index.html
@@ -429,6 +429,48 @@
 
     <!--======================End student questions area =======================-->
 
+    <!--======================Start trusted company area =======================-->
+    <section>
+        <div class="container">
+            <div class="trusted-company">
+                <div class="trusted-company-header">
+                    <h1>Trusted by ov er 800+ companies</h1>
+                </div>
+
+                <div class="trusted-company-main">
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-1.png" alt="">
+                    </div>
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-2.png" alt="">
+                    </div>
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-3.png" alt="">
+                    </div>
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-4.png" alt="">
+                    </div>
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-5.png" alt="">
+                    </div>
+
+                    <div class="trusted-company-image">
+                        <img src="/assets/images/company-6.png" alt="">
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+    </section>
+    <!--======================End trusted company area =======================-->
+
 
 
 
