--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 </div>
 
                 <div>
-                    
+
                 </div>
 
             </div>
@@ -470,6 +470,30 @@
         </div>
     </section>
     <!--======================End trusted company area =======================-->
+
+
+    <!--======================Start footer area =======================-->
+
+    <section>
+        <div class="footer">
+           <a href="/"><h1>Pro Edu</h1></a>
+            <p>Office 41, Zawaya Buildin, Ghala Muscat,
+                Sultanate of Oman</p>
+            <h4>Privacy Ploicy | Terms of use</h4>
+
+            <div class="footer-icon">
+                <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="#"> <i class="fa-brands fa-tiktok"></i></a>
+
+
+            </div>
+
+        </div>
+    </section>
+
+    <!--======================End footer area =======================-->
 
 
 
