added a elearning institute section responsive

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <!--======================Start E-learning institute  area =======================-->
 
-    <!-- <section>
+    <section>
         <div class="container">
             <div class="elearning-institute">
 
@@ -263,7 +263,7 @@
 
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!--======================End E-learning institute area =======================-->
 
