added a registration page responsive

--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
         <div class="container">
             <div class="register">
 
-                <!-- <div>
+                <div>
                     <h1>Ready to join?</h1>
                     <p>It is a long established fact that a reader will be distracted by the readable content of a page
                         when looking at its layout.</p>
-                </div> -->
+                </div>
                 <div class="registration-btn">
-                    <!-- <button>Register Now</button> -->
+                    <button>Register Now</button>
                     <!-- <form >
                         <div class="form">
                             <label class="form-label">Your Name</label>
