banner pic updated

--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
 
             <div class="owl-carousel owl-theme ">
                 <div class="item banner-img">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
                     <img src="/assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
             </div>
         </div>
