all image path updated

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <!-- first card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-1.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-1.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Fundamental Of UI/UX Design</h2>
@@ -134,7 +134,7 @@
                         <!-- second card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-2.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-2.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Javascript Basic to advanced</h2>
@@ -152,7 +152,7 @@
                         <!-- third card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-3.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-3.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Fullstack Web Development</h2>
@@ -165,7 +165,7 @@
                         <!-- fourth card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-4.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-4.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Digital Marketing</h2>
@@ -183,7 +183,7 @@
                         <!-- fifth card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-5.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-5.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Photography Basic Rules</h2>
@@ -196,7 +196,7 @@
                         <!-- sixth card -->
                         <div class="popular-courses">
                             <div>
-                                <img class="popular-course-img" src="/assets/images/course-6.png" alt="">
+                                <img class="popular-course-img" src="./assets/images/course-6.png" alt="">
                             </div>
                             <div class="popular-course-text">
                                 <h2>Motion Graphics</h2>
@@ -228,7 +228,7 @@
             <div class="elearning-institute">
 
                 <div class="elearning-image">
-                    <img src="/assets/images/elearning.png" alt="">
+                    <img src="./assets/images/elearning.png" alt="">
                 </div>
 
                 <div class="elearning-text">
@@ -317,7 +317,7 @@
                     <!-- first card -->
                     <div class="successful-student-card">
                         <div>
-                            <img src="/assets/images/student-1.png" alt="">
+                            <img src="./assets/images/student-1.png" alt="">
                         </div>
                         <h2>Awlad Hossain</h2>
                         <p>UIUX Designer</p>
@@ -326,7 +326,7 @@
                     <!-- second card -->
                     <div class="successful-student-card">
                         <div>
-                            <img src="/assets/images/student-2.png" alt="">
+                            <img src="./assets/images/student-2.png" alt="">
                         </div>
                         <h2>Jannatul Islam</h2>
                         <p>Motion Design</p>
@@ -335,7 +335,7 @@
                     <!-- third card -->
                     <div class="successful-student-card">
                         <div>
-                            <img src="/assets/images/student-3.png" alt="">
+                            <img src="./assets/images/student-3.png" alt="">
                         </div>
                         <h2>Imran Hossain</h2>
                         <p>Graphic Designer</p>
@@ -344,7 +344,7 @@
                     <!-- fourth card -->
                     <div class="successful-student-card">
                         <div>
-                            <img src="/assets/images/student-4.png" alt="">
+                            <img src="./assets/images/student-4.png" alt="">
                         </div>
                         <h2>Nishi Akter</h2>
                         <p>Web Developer</p>
@@ -526,27 +526,27 @@
                 <div class="trusted-company-main">
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-1.png" alt="">
+                        <img src="./assets/images/company-1.png" alt="">
                     </div>
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-2.png" alt="">
+                        <img src="./assets/images/company-2.png" alt="">
                     </div>
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-3.png" alt="">
+                        <img src="./assets/images/company-3.png" alt="">
                     </div>
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-4.png" alt="">
+                        <img src="./assets/images/company-4.png" alt="">
                     </div>
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-5.png" alt="">
+                        <img src="./assets/images/company-5.png" alt="">
                     </div>
 
                     <div class="trusted-company-image">
-                        <img src="/assets/images/company-6.png" alt="">
+                        <img src="./assets/images/company-6.png" alt="">
                     </div>
 
                 </div>
