--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="/assets/images/banner.jpg" alt="">
+                    <img src="./assets/images/banner.jpg" alt="">
                 </div>
                 <div class="item">
                     <img src="./assets/images/banner.jpg" alt="">
